# another-firebase-client

./: .dir-locals.el  Cargo.toml  README.md  justfile
crates/admin_auth/: Cargo.toml  README.md
crates/admin_auth/examples/: jwt-verification-example.rs
crates/admin_auth/src/: accounts_batch_get.rs  accounts_lookup.rs  error.rs  lib.rs  user.rs  verify.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: authorization.rs  cli.rs  error.rs  lib.rs  scopes.rs  service_account.rs  service_account_auth.rs  token.rs
crates/auth/src/end_user/: config.rs  email.rs  mod.rs  refresh.rs  urls.rs
crates/auth/src/web_user_auth/: config.rs
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/firestore/: client.rs  collection.rs  mod.rs  streaming.rs
crates/client/src/firestore/conversion/: json.rs  mod.rs
crates/client/src/rdb/: client.rs  listener.rs  listener_updates.rs  mod.rs
examples/admin_auth_example/: Cargo.toml
examples/admin_auth_example/src/: main.rs
examples/anon-example/: Cargo.toml
examples/anon-example/src/: main.rs
examples/firebase-client-example/: Cargo.toml
examples/firebase-client-example/src/: main.rs
examples/join-session-example/: Cargo.toml
examples/join-session-example/src/: main.rs
examples/service-account-example/: Cargo.toml
examples/service-account-example/src/: main.rs
src/: lib.rs  result.rs
src/firestore/: client.rs  collection.rs  fetch_and_update.rs  mod.rs  streaming.rs  structured_query.rs
src/firestore/conversion/: json.rs  mod.rs
src/rdb/: client.rs  listener.rs  listener_updates.rs
