[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/admin_auth",
  "crates/auth",

  "examples/firebase-client-example",
  "examples/join-session-example",
  "examples/anon-example",
]
exclude = [
  "examples/service-account-example",
  "examples/admin_auth_example",
]

[package]
name = "firebase-client"
version = "0.1.0"
categories = ["database", "api-bindings"]
edition = "2021"
keywords = ["firebase", "firestore", "google-cloud"]
description = "A client for firebase firestore and realtime DB."

[dependencies]
async-stream = "0.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
eventsource-client = "0.11"
firestore_grpc = "0.175"
futures = "0.3.17"
itertools = "0.11"
jsonwebtoken = "8.1"
prost-types = "0.9"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1"
tokio = { version = "1.19.0", features = ["full"] }
tracing = "0.1.34"
url = "2.2.2"

firebase-client-admin-auth = { path = "crates/admin_auth" }
firebase-client-auth = { path = "crates/auth" }

[dev-dependencies]
pretty_assertions = "1.0.0"
test-env-log = "^0.2.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
