[package]
name = "firebase-client-admin-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3.5"
async-trait = "0.1.68"
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "8.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.31"
tokio = { version = "1.19.0", default-features = false, features = ["sync"] }
tracing = "0.1.34"
url = "2.3.1"
which = "4.2.5"

firebase-client-auth = { path = "../auth" }
futures = "0.3.28"
