[package]
name = "firebase-client-admin-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.68"
base64 = "0.21.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.28"
httpdate = "1.0.2"
jsonwebtoken = "8.1"
jwt-simple = "0.11.6"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.31"
tokio = { version = "1.19.0", default-features = false, features = ["sync"] }
tracing = "0.1.34"
typed-builder = "0.15.1"
url = "2.3.1"
which = "4.2.5"
x509-certificate = "0.21.0"

firebase-client-auth = { path = "../auth" }

[dev-dependencies]
tokio = { version = "1.19.0", features = ["full"] }
