[package]
name = "firebase-client-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdb-client"
path = "src/bin/rdb-client.rs"

[[bin]]
name = "firestore-client"
path = "src/bin/firestore-client.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.17"
serde_json = "1.0.66"
tokio = { version = "1.19.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

firebase-client = { path = "../.." }
firebase-client-auth = { path = "../auth" }
