[package]
name = "firebase-client-example"
version = "0.1.0"
description = "Example for client auth."
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.19.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

firebase-client-auth = { path = "../../crates/auth" }
firebase-client = { path = "../../crates/client" }
